tests/positive/MiniC/MultiModules/Bool.mjuvix
module Bool;

inductive Bool {
  true : Bool;
  false : Bool;
};


end;
