tests/negative/MicroJuvix/WrongReturnTypeParameters.mjuvix
module WrongReturnTypeParameters;

inductive A (B : Type) {
c : A;
};

end;
